modification to background image and article

--- a/App/scss/_body.scss
+++ b/App/scss/_body.scss
@@ -109,3 +109,43 @@
     }
   }
 }
+
+.home-about {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: row;
+  height: 35rem;
+  justify-content: space-between;
+  &__image {
+    // flex: 1;
+    width: 50%;
+    padding-top: 0 10px;
+    background-image: url(../images/homepage/desktop/image-homepage-profile@2x.jpg);
+    background-repeat: no-repeat;
+    // height: 25rem;
+    background-size: cover;
+  }
+
+  &__content {
+    border-top: 0.3px solid #33323d;
+    border-bottom: 0.3px solid #33323d;
+    font-family: "Public Sans", sans-serif;
+    line-height: 1.7;
+    width: 30%;
+    margin: 0 7rem;
+
+    > h2 {
+      padding-top: 20px;
+    }
+  }
+
+  &__button {
+    border: 1px solid #33323d;
+    width: 65%;
+    padding: 12px 35px;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+    color: #33323d;
+  }
+}
