--- a/App/scss/_body.scss
+++ b/App/scss/_body.scss
@@ -5,7 +5,7 @@
 .container {
   width: 88%;
   margin: auto;
-  overflow: hidden;
+  // overflow: hidden;
   margin-top: 3rem;
   display: block;
 
@@ -20,10 +20,11 @@
     background-image: url(../images/homepage/mobile/image-homepage-hero@2x.jpg);
     height: 20rem;
     background-size: cover;
+    background-position: center center;
 
     @include breakpoint-up(medium) {
       background-image: url(../images/homepage/tablet/image-homepage-hero@2x.jpg);
-      height: 45rem;
+      height: 35rem;
       background-size: cover;
     }
     @include breakpoint-up(large) {
@@ -34,16 +35,16 @@
   }
   &__content {
     position: absolute;
-    height: 40%;
+    height: 45%;
     bottom: 0;
-    background: white;
     z-index: 2;
-    width: 70%;
+    width: 75%;
     display: flex;
     flex-direction: column;
+    background-color: #fff;
 
     @include breakpoint-up(large) {
-      height: 50%;
+      height: 60%;
       width: 40%;
     }
 
@@ -56,96 +57,163 @@
     &-title {
       margin-top: 0;
       height: 60%;
-      padding-bottom: 10px;
-      padding: 35px 25px 25px 0;
-      width: 90% auto;
-      font-size: 2.5rem;
-      line-height: 3rem;
+      padding: 2.5rem 5rem 2.5rem 0;
+      // width: 90% auto;
+      font-size: 2.6rem;
+      line-height: 2.5rem;
       letter-spacing: 0.5px;
       overflow: hidden;
       font-weight: 600;
+      background-color: #fff;
 
       @include breakpoint-down(small) {
-        padding: 25px 0;
+        padding-top: 25px;
+        padding-right: 0;
       }
     }
   }
 
   &__button {
     position: absolute;
-    display: flex;
-    height: 20px;
+    height: 3rem;
     align-items: center;
     width: 12rem;
-    padding: 10px 0;
-
-    background-color: #1c3444;
+    // background-color: #1c3444;
     z-index: 2;
     bottom: 0;
+    @include transit;
+
+    @include breakpoint-up(medium) {
+      width: 40%;
+    }
+
+    @include breakpoint-up(large) {
+      width: 43%;
+    }
+
+    &:hover {
+      opacity: 0.8;
+      @include transit;
+    }
 
     &-icon {
       background-color: #1c3444;
-      padding: 5px 0 0 15px;
-      width: 1px;
-      flex: 1;
+      float: left;
+      height: 100%;
+      width: 25%;
+
+      > svg {
+        padding-top: 2px;
+        display: flex;
+        transform: translateY(100%);
+        margin: auto;
+      }
     }
 
     .btn {
-      flex: 4;
-      padding: 11px;
+      height: 100%;
+      width: 75%;
       background-color: #203a4c;
-
-      > p {
-        padding-left: 10px;
-        letter-spacing: 2px;
-        font-size: 11px;
-        font-weight: bolder;
-        text-transform: uppercase;
-        position: relative;
-        margin: 0;
-        color: white;
-        font-size: 0.875rem;
-      }
+      float: right;
+      letter-spacing: 1.5px;
+      font-size: 11px;
+      font-weight: bolder;
+      text-transform: uppercase;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 0.875rem;
     }
   }
 }
 
 .home-about {
-  margin-top: 5rem;
   display: flex;
-  flex-direction: row;
-  height: 35rem;
+  margin-top: 8rem;
+  height: 34rem;
+  width: 100%;
   justify-content: space-between;
+
+  @include breakpoint-down(small) {
+    height: 55rem;
+    // height: 100%;
+    flex-direction: column;
+    margin-top: 4rem;
+  }
+
   &__image {
-    // flex: 1;
-    width: 50%;
-    padding-top: 0 10px;
+    width: 49%;
+    height: 34rem;
     background-image: url(../images/homepage/desktop/image-homepage-profile@2x.jpg);
+    background-position: center center;
     background-repeat: no-repeat;
-    // height: 25rem;
+    padding: 0;
+    margin: 0;
     background-size: cover;
+
+    @include breakpoint-down(small) {
+      display: block;
+      width: auto;
+      height: 50%;
+      margin-bottom: 2rem;
+      background-size: cover;
+    }
   }
 
   &__content {
-    border-top: 0.3px solid #33323d;
-    border-bottom: 0.3px solid #33323d;
+    border-top: 0.3px solid #dcdcde;
+    border-bottom: 0.3px solid #dcdcde;
     font-family: "Public Sans", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     line-height: 1.7;
-    width: 30%;
-    margin: 0 7rem;
+    padding: 0;
+    margin-right: 6rem;
+    width: 35%;
 
-    > h2 {
-      padding-top: 20px;
+    @include breakpoint-down(medium) {
+      margin: 0;
+      width: 47%;
+      // padding: auto;
+    }
+    @include breakpoint-down(small) {
+      margin: 0;
+      width: 100%;
+      height: auto;
+      padding-bottom: 2rem;
+    }
+
+    > p {
+      padding-bottom: 1rem;
+      font-weight: 300;
+      color: #33323d;
     }
   }
 
   &__button {
     border: 1px solid #33323d;
-    width: 65%;
+    width: 8rem;
     padding: 12px 35px;
     text-transform: uppercase;
     font-size: 12px;
+    display: flex;
+    justify-content: center;
     font-weight: 600;
     color: #33323d;
+    @include transit;
+
+    &:hover {
+      opacity: 0.9;
+      @include transit;
+      background-color: #33323d;
+      color: #fff;
+    }
+
+    // @include breakpoint-down(small) {
+    //   margin-bottom: 3rem;
+    // }
   }
 }
