--- a/App/scss/_variables.scss
+++ b/App/scss/_variables.scss
@@ -1,3 +1,15 @@
+//colors
+$cyan: #5fb4a2;
+$red: #f43030;
+$dark-blue: #203a4c;
+$grayish-dark-blue: #33323d;
+$very-light-gray: #fafafa;
+$light-gray: #eaeaeb;
+$white: #ffffff;
+$border-gray: #dcdcde;
+$form-input-bg: #e5e5e6;
+$form-input-place-holder: #9d9da3;
+
 $breakpoints-up: (
   "medium": "40em",
   "large": "64em",
