--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@ body {
 *,
 *a {
   font-weight: 400;
-  font-family: "Public Sans", sans-serif;
 }
 
 ul {
@@ -19,6 +18,10 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+#t-h1 {
+  font-family: "Ibarra Real Nova", serif;
 }
 
 .main-nav {
@@ -102,7 +105,6 @@ a {
 .container {
   width: 88%;
   margin: auto;
-  overflow: hidden;
   margin-top: 3rem;
   display: block;
 }
@@ -118,12 +120,13 @@ a {
   background-image: url(../images/homepage/mobile/image-homepage-hero@2x.jpg);
   height: 20rem;
   background-size: cover;
+  background-position: center center;
 }
 
 @media (min-width: 40em) {
   .home-intro__image {
     background-image: url(../images/homepage/tablet/image-homepage-hero@2x.jpg);
-    height: 45rem;
+    height: 35rem;
     background-size: cover;
   }
 }
@@ -138,11 +141,10 @@ a {
 
 .home-intro__content {
   position: absolute;
-  height: 40%;
+  height: 45%;
   bottom: 0;
-  background: white;
   z-index: 2;
-  width: 70%;
+  width: 75%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -150,11 +152,12 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-color: #fff;
 }
 
 @media (min-width: 64em) {
   .home-intro__content {
-    height: 50%;
+    height: 60%;
     width: 40%;
   }
 }
@@ -170,110 +173,202 @@ a {
 .home-intro__content-title {
   margin-top: 0;
   height: 60%;
-  padding-bottom: 10px;
-  padding: 35px 25px 25px 0;
-  width: 90% auto;
-  font-size: 2.5rem;
-  line-height: 3rem;
+  padding: 2.5rem 5rem 2.5rem 0;
+  font-size: 2.6rem;
+  line-height: 2.5rem;
   letter-spacing: 0.5px;
   overflow: hidden;
   font-weight: 600;
+  background-color: #fff;
 }
 
 @media (max-width: 39.937em) {
   .home-intro__content-title {
-    padding: 25px 0;
+    padding-top: 25px;
+    padding-right: 0;
   }
 }
 
 .home-intro__button {
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 20px;
+  height: 3rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   width: 12rem;
-  padding: 10px 0;
-  background-color: #1c3444;
   z-index: 2;
   bottom: 0;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+@media (min-width: 40em) {
+  .home-intro__button {
+    width: 40%;
+  }
+}
+
+@media (min-width: 64em) {
+  .home-intro__button {
+    width: 43%;
+  }
+}
+
+.home-intro__button:hover {
+  opacity: 0.8;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
 }
 
 .home-intro__button-icon {
   background-color: #1c3444;
-  padding: 5px 0 0 15px;
-  width: 1px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  float: left;
+  height: 100%;
+  width: 25%;
+}
+
+.home-intro__button-icon > svg {
+  padding-top: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  margin: auto;
 }
 
 .home-intro__button .btn {
-  -webkit-box-flex: 4;
-      -ms-flex: 4;
-          flex: 4;
-  padding: 11px;
+  height: 100%;
+  width: 75%;
   background-color: #203a4c;
-}
-
-.home-intro__button .btn > p {
-  padding-left: 10px;
-  letter-spacing: 2px;
+  float: right;
+  letter-spacing: 1.5px;
   font-size: 11px;
   font-weight: bolder;
   text-transform: uppercase;
-  position: relative;
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: white;
   font-size: 0.875rem;
 }
 
 .home-about {
-  margin-top: 5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  height: 35rem;
+  margin-top: 8rem;
+  height: 34rem;
+  width: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
+@media (max-width: 39.937em) {
+  .home-about {
+    height: 55rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 4rem;
+  }
+}
+
 .home-about__image {
-  width: 50%;
-  padding-top: 0 10px;
+  width: 49%;
+  height: 34rem;
   background-image: url(../images/homepage/desktop/image-homepage-profile@2x.jpg);
+  background-position: center center;
   background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
   background-size: cover;
 }
 
-.home-about__content {
-  border-top: 0.3px solid #33323d;
-  border-bottom: 0.3px solid #33323d;
-  font-family: "Public Sans", sans-serif;
-  line-height: 1.7;
-  width: 30%;
-  margin: 0 7rem;
+@media (max-width: 39.937em) {
+  .home-about__image {
+    display: block;
+    width: auto;
+    height: 50%;
+    margin-bottom: 2rem;
+    background-size: cover;
+  }
 }
 
-.home-about__content > h2 {
-  padding-top: 20px;
+.home-about__content {
+  border-top: 0.3px solid #dcdcde;
+  border-bottom: 0.3px solid #dcdcde;
+  font-family: "Public Sans", sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  line-height: 1.7;
+  padding: 0;
+  margin-right: 6rem;
+  width: 35%;
+}
+
+@media (max-width: 63.937em) {
+  .home-about__content {
+    margin: 0;
+    width: 47%;
+  }
+}
+
+@media (max-width: 39.937em) {
+  .home-about__content {
+    margin: 0;
+    width: 100%;
+    height: auto;
+    padding-bottom: 2rem;
+  }
+}
+
+.home-about__content > p {
+  padding-bottom: 1rem;
+  font-weight: 300;
+  color: #33323d;
 }
 
 .home-about__button {
   border: 1px solid #33323d;
-  width: 65%;
+  width: 8rem;
   padding: 12px 35px;
   text-transform: uppercase;
   font-size: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 600;
   color: #33323d;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.home-about__button:hover {
+  opacity: 0.9;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+  background-color: #33323d;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
