readusting the font

--- a/App/scss/_body.scss
+++ b/App/scss/_body.scss
@@ -58,7 +58,7 @@
       margin-top: 0;
       height: 60%;
       padding: 2.5rem 5rem 2.5rem 0;
-      // width: 90% auto;
+      font-family: "Ibarra Real Nova", serif;
       font-size: 2.6rem;
       line-height: 2.5rem;
       letter-spacing: 0.5px;
@@ -116,15 +116,16 @@
       background-color: #203a4c;
       float: right;
       letter-spacing: 1.5px;
-      font-size: 11px;
-      font-weight: bolder;
+      // font-size: 8px;
+      font-family: "Public Sans", sans-serif;
+      font-weight: 400;
       text-transform: uppercase;
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       color: white;
-      font-size: 0.875rem;
+      font-size: 0.75rem;
     }
   }
 }
@@ -165,7 +166,6 @@
   &__content {
     border-top: 0.3px solid #dcdcde;
     border-bottom: 0.3px solid #dcdcde;
-    font-family: "Public Sans", sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -186,7 +186,14 @@
       padding-bottom: 2rem;
     }
 
+    &__heading {
+      font-family: "Ibarra Real Nova", serif;
+      font-size: 30px;
+      font-weight: 600;
+    }
+
     > p {
+      font-family: "Public Sans", sans-serif;
       padding-bottom: 1rem;
       font-weight: 300;
       color: #33323d;
