--- a/App/scss/_global.scss
+++ b/App/scss/_global.scss
@@ -8,7 +8,7 @@ body {
 *a {
   //   font-size: 1rem;
   font-weight: 400;
-  // font-family: "Public Sans", sans-serif;
+  font-family: "Public Sans", sans-serif;
 }
 
 ul {
@@ -19,8 +19,4 @@ ul {
 
 a {
   text-decoration: none;
-}
-
-#t-h1 {
-  font-family: "Ibarra Real Nova", serif;
 }
