--- a/App/scss/_global.scss
+++ b/App/scss/_global.scss
@@ -20,3 +20,14 @@ ul {
 a {
   text-decoration: none;
 }
+
+.screen-reader-only {
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(0px 0px 99.9% 99.9%);
+  overflow: hidden;
+  border: 0;
+}
