--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,18 @@ a {
   text-decoration: none;
 }
 
+.screen-reader-only {
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(0px 0px 99.9% 99.9%);
+          clip-path: inset(0px 0px 99.9% 99.9%);
+  overflow: hidden;
+  border: 0;
+}
+
 .main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -103,13 +115,16 @@ a {
   width: 88%;
   margin: auto;
   margin-top: 3rem;
-  display: block;
 }
 
 @media (min-width: 40em) {
   .container {
     position: relative;
   }
+}
+
+.home-intro {
+  display: block;
 }
 
 .home-intro__image {
@@ -194,6 +209,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
   width: 12rem;
+  background-color: #1c3444;
   z-index: 2;
   bottom: 0;
   -webkit-transition: 300ms ease-in-out;
@@ -374,5 +390,149 @@ a {
   transition: 300ms ease-in-out;
   background-color: #33323d;
   color: #fff;
+}
+
+.footer {
+  background-color: #33323d;
+  width: 100%;
+  overflow: hidden;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1.2rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media (max-width: 39.937em) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 15rem;
+  }
+}
+
+.footer__container-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 39.937em) {
+  .footer__container-left {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.footer__logo {
+  margin-right: 3rem;
+}
+
+@media (max-width: 39.937em) {
+  .footer__logo {
+    margin: 0.6rem 0rem;
+  }
+}
+
+.footer__logo > svg > path {
+  fill: #fff;
+}
+
+.footer__nav-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 39.937em) {
+  .footer__nav-items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.footer__nav-items__nav-item:not(:last-child) {
+  margin-right: 2rem;
+}
+
+@media (max-width: 39.937em) {
+  .footer__nav-items__nav-item:not(:last-child) {
+    margin: 0.6rem 0;
+  }
+}
+
+@media (max-width: 39.937em) {
+  .footer__nav-items__nav-item {
+    margin: 0.6rem 0;
+  }
+}
+
+.footer__nav-items__nav-item > a {
+  font-family: "Public Sans", sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+  color: #fff;
+  font-size: 11px;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.footer__nav-items__nav-item > a:hover {
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+  color: #5fb4a2;
+}
+
+.footer__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 39.937em) {
+  .footer__socials {
+    margin: 1.5rem 0;
+  }
+}
+
+.footer__socials__social:not(:last-child) {
+  margin-right: 15px;
+}
+
+.footer__socials__social__icon > path {
+  fill: #fff;
 }
 /*# sourceMappingURL=main.css.map */
