--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,6 @@ a {
 .footer {
   background-color: #33323d;
   width: 100%;
-  overflow: hidden;
 }
 
 .footer__container {
@@ -420,6 +419,9 @@ a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: 15rem;
   }
 }
