--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,6 @@ a {
           align-items: center;
   width: 88%;
   margin: 3.2rem auto 0;
-  overflow: hidden;
 }
 
 .main-nav-links {
@@ -87,6 +86,7 @@ a {
 }
 
 .main-nav-burger {
+  z-index: 4;
   margin: 0;
   border: 0;
   width: 26px;
@@ -135,26 +135,26 @@ a {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
   background: transparent;
-  -webkit-transition: 500ms ease-in-out;
-  transition: 500ms ease-in-out;
+  -webkit-transition: 600ms ease-in-out;
+  transition: 600ms ease-in-out;
 }
 
 .main-nav-burger-item.open::before {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
   -webkit-transform-origin: 6px 5px;
           transform-origin: 6px 5px;
   -webkit-transition: 300ms ease-in-out;
   transition: 300ms ease-in-out;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .main-nav-burger-item.open::after {
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
   -webkit-transform-origin: 6px -4px;
           transform-origin: 6px -4px;
-  -webkit-transition: 300ms ease-in-out;
-  transition: 300ms ease-in-out;
 }
 
 @media (min-width: 40em) {
@@ -165,6 +165,53 @@ a {
 
 @media (max-width: 39.937em) {
   .hide_for_mob {
+    z-index: 3;
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    top: 1px;
+    right: 0;
+    -webkit-transition: 500ms ease;
+    transition: 500ms ease;
+  }
+  .hide_for_mob .overlay {
+    z-index: 3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, #e5e5e6, #9d9da3);
+    border-radius: 50%;
+    left: 50px;
+    -webkit-transform: translate(30%, -10%) rotate(-10deg);
+            transform: translate(30%, -10%) rotate(-10deg);
+    -webkit-transition: 500ms ease;
+    transition: 500ms ease;
+  }
+  .hide_for_mob .main-nav-links {
+    z-index: 4;
+    position: absolute;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    top: 30%;
+    right: 10%;
+    -webkit-transition: 500ms ease;
+    transition: 500ms ease;
+  }
+  .hide_for_mob .main-nav-links-item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 12px;
+    -webkit-transition: 500ms ease;
+    transition: 500ms ease;
+  }
+  .hide_for_mob:not(.show) {
     display: none;
   }
 }
@@ -695,5 +742,13 @@ a {
 
 .footer__socials__social__icon > path {
   fill: #fff;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.footer__socials__social__icon > path:hover {
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+  fill: #5fb4a2;
 }
 /*# sourceMappingURL=main.css.map */
