--- a/App/scss/_footer.scss
+++ b/App/scss/_footer.scss
@@ -12,7 +12,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 15rem;
+      height: 17rem;
     }
 
     &-left {
@@ -31,7 +31,7 @@
     margin-right: 3rem;
 
     @include breakpoint-down(small) {
-      margin: 0.6rem 0rem;
+      margin: 1.5rem 0 0.6rem 0;
     }
 
     > svg {
