--- a/App/scss/_header.scss
+++ b/App/scss/_header.scss
@@ -4,6 +4,11 @@
   align-items: center;
   width: 88%;
   margin: 3.2rem auto 0;
+
+  @include breakpoint-down(small) {
+    margin-top: 2rem;
+  }
+  // position: sticky;
   // overflow: hidden;
 
   //   &-logo {
@@ -120,32 +125,40 @@
     height: 100%;
     top: 1px;
     right: 0;
-    transition: 500ms ease;
 
     & .overlay {
       z-index: 3;
       position: absolute;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle, #e5e5e6, #9d9da3);
-      border-radius: 50%;
-      left: 50px;
-      transform: translate(30%, -10%) rotate(-10deg);
-      transition: 500ms ease;
+      width: 60%;
+      height: 30%;
+      background: radial-gradient(circle, #203a4c, #33323d);
+      top: 14%;
+      right: 6%;
     }
 
     & .main-nav-links {
       z-index: 4;
       position: absolute;
       flex-direction: column;
-      top: 30%;
-      right: 10%;
-      transition: 500ms ease;
+      top: 18%;
+      right: 20%;
 
       &-item {
         flex-direction: column;
         margin: 12px;
-        transition: 500ms ease;
+
+        > a {
+          color: #fff;
+
+          &:hover {
+            @include transit;
+            color: #5fb4a2;
+          }
+        }
+
+        .active {
+          color: #5fb4a2;
+        }
       }
     }
 
