--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,12 @@ a {
   margin: 3.2rem auto 0;
 }
 
+@media (max-width: 39.937em) {
+  .main-nav {
+    margin-top: 2rem;
+  }
+}
+
 .main-nav-links {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -174,21 +180,15 @@ a {
     height: 100%;
     top: 1px;
     right: 0;
-    -webkit-transition: 500ms ease;
-    transition: 500ms ease;
   }
   .hide_for_mob .overlay {
     z-index: 3;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(circle, #e5e5e6, #9d9da3);
-    border-radius: 50%;
-    left: 50px;
-    -webkit-transform: translate(30%, -10%) rotate(-10deg);
-            transform: translate(30%, -10%) rotate(-10deg);
-    -webkit-transition: 500ms ease;
-    transition: 500ms ease;
+    width: 60%;
+    height: 30%;
+    background: radial-gradient(circle, #203a4c, #33323d);
+    top: 14%;
+    right: 6%;
   }
   .hide_for_mob .main-nav-links {
     z-index: 4;
@@ -197,10 +197,8 @@ a {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    top: 30%;
-    right: 10%;
-    -webkit-transition: 500ms ease;
-    transition: 500ms ease;
+    top: 18%;
+    right: 20%;
   }
   .hide_for_mob .main-nav-links-item {
     -webkit-box-orient: vertical;
@@ -208,8 +206,17 @@ a {
         -ms-flex-direction: column;
             flex-direction: column;
     margin: 12px;
-    -webkit-transition: 500ms ease;
-    transition: 500ms ease;
+  }
+  .hide_for_mob .main-nav-links-item > a {
+    color: #fff;
+  }
+  .hide_for_mob .main-nav-links-item > a:hover {
+    -webkit-transition: 300ms ease-in-out;
+    transition: 300ms ease-in-out;
+    color: #5fb4a2;
+  }
+  .hide_for_mob .main-nav-links-item .active {
+    color: #5fb4a2;
   }
   .hide_for_mob:not(.show) {
     display: none;
@@ -253,6 +260,12 @@ a {
 @media (min-width: 40em) {
   .container {
     position: relative;
+  }
+}
+
+@media (max-width: 39.937em) {
+  .container {
+    margin-top: 2rem;
   }
 }
 
@@ -628,7 +641,7 @@ a {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    height: 15rem;
+    height: 17rem;
   }
 }
 
@@ -659,7 +672,7 @@ a {
 
 @media (max-width: 39.937em) {
   .footer__logo {
-    margin: 0.6rem 0rem;
+    margin: 1.5rem 0 0.6rem 0;
   }
 }
 
